--- a/.helm/Chart.yaml
+++ b/.helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: frontend
-description: A Helm chart for Kubernetes deployment of Template App
+description: A Helm chart for Kubernetes deployment of Dataset Image annotator frontend
 
 # A chart can be either an 'application' or a 'library' chart.
 #
