--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-project-template",
+  "name": "dataset-image-annotator-frontend",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -8,20 +8,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.11",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.0.4",
-    "i18next": "^22.0.8",
-    "i18next-http-backend": "^2.0.2",
+    "antd": "^5.0.7",
+    "i18next": "^22.4.6",
+    "i18next-http-backend": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flag-kit": "^1.1.1",
-    "react-i18next": "^12.1.0",
-    "react-router-dom": "^6.4.4",
+    "react-i18next": "^12.1.1",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.3",
+    "typescript": "^4.9.4",
     "web-vitals": "^3.1.0"
   },
   "scripts": {
