--- a/.helm/Chart.yaml
+++ b/.helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: frontend
+name: annotator-frontend
 description: A Helm chart for Kubernetes deployment of Dataset Image annotator frontend
 
 # A chart can be either an 'application' or a 'library' chart.
