--- a/.helm/templates/frontend-deployment.yaml
+++ b/.helm/templates/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       {{- end }}
       labels:
         {{- include "frontend.selectorLabels" . | nindent 8 }}
-        app: frontend
+        app: annotator-frontend
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
