--- a/.helm/templates/frontend-service.yaml
+++ b/.helm/templates/frontend-service.yaml
@@ -13,4 +13,4 @@ spec:
       name: http
   selector:
     {{- include "frontend.selectorLabels" . | nindent 4 }}
-    app: frontend
+    app: annotator-frontend
