--- a/.helm/templates/frontend-service.yaml
+++ b/.helm/templates/frontend-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "frontend.fullname" . }}
+  name: {{ include "frontend.name" . }}
   labels:
     {{- include "frontend.labels" . | nindent 4 }}
 spec:
