--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@types/react-dom": "^18.2.15",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.11.1",
-    "i18next": "^23.6.0",
-    "i18next-http-backend": "^2.3.1",
+    "i18next": "^23.7.5",
+    "i18next-http-backend": "^2.4.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flag-kit": "^1.1.1",
-    "react-i18next": "^13.3.1",
+    "react-i18next": "^13.4.0",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.2.2",
     "web-vitals": "^3.5.0"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": ">3.2.1"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
