--- a/package.json
+++ b/package.json
@@ -5,24 +5,25 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.0",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.8",
-    "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/jest": "^29.5.10",
+    "@types/node": "^20.9.4",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.11.1",
-    "i18next": "^23.7.5",
-    "i18next-http-backend": "^2.4.1",
+    "antd": "^5.11.3",
+    "i18next": "^23.7.6",
+    "i18next-http-backend": "^2.4.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flag-kit": "^1.1.1",
-    "react-i18next": "^13.4.0",
-    "react-router-dom": "^6.18.0",
-    "typescript": "^5.2.2",
+    "react-i18next": "^13.5.0",
+    "react-router-dom": "^6.20.0",
+    "react-scripts": "^5.0.1",
+    "typescript": "^5.3.2",
     "web-vitals": "^3.5.0"
   },
   "overrides": {
