--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.0.4",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.5.1",
+    "@ant-design/icons": "^5.6.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.12.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.22.0",
-    "i18next": "^23.16.5",
-    "i18next-http-backend": "^2.6.2",
+    "antd": "^5.23.3",
+    "i18next": "^24.2.2",
+    "i18next-http-backend": "^3.0.2",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flag-kit": "^1.1.1",
-    "react-i18next": "^15.1.1",
-    "react-router-dom": "^6.28.0",
+    "react-i18next": "^15.4.0",
+    "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.6.3",
+    "react-use-websocket": "^4.11.1",
+    "typescript": "^5.7.3",
     "web-vitals": "^3.5.2"
   },
   "overrides": {
