--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-router-dom": "^5.3.3",
-    "antd": "^5.24.1",
+    "antd": "^5.24.2",
     "i18next": "^24.2.2",
     "i18next-http-backend": "^3.0.2",
     "moment": "^2.30.1",
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "react-use-websocket": "^4.13.0",
+    "sass": "^1.85.0",
     "typescript": "^5.7.3",
     "web-vitals": "^3.5.2"
   },
